working plugin for service now
